%%{init: { 
    'theme': 'dark', 
    'themeVariables': { 
        'background': '#121212', 
        'lineColor': '#a5d7f7', 
        'fontFamily': 'Cascadia Code, Fira Code, Consolas, Courier New, monospace', 
        'fontSize': '14px' 
    },
    'themeCSS': 'path { stroke-width: 1.5px !important; }'
} }%%

classDiagram

class ListaDePrecios {
  - nombre: string
  - fechaDeVigencia: Date
  - esMayorista: boolean
  - preciosPorArticulo: PrecioPorArticulo[]
}

class PrecioPorArticulo {
  - precio: number
  - articulo: Articulo
}

class Articulo {
  - nombre: string
  - costoDeProduccion: number
  - observacion?: string
}

ListaDePrecios "1" --> "0..*" PrecioPorArticulo
PrecioPorArticulo "1" --> "1" Articulo

classDef default fill:#362b2b,stroke:#f39bce,color:#e4dcd2